mobile z-index issue

--- a/src/fscheckboxgroup.component.scss
+++ b/src/fscheckboxgroup.component.scss
@@ -9,7 +9,7 @@
     .mat-form-field-label {
         display: block;
         top: 0;    
-        transform: scale(.75) translateZ(.001px);
+        transform: scale(.75);
         transform-origin: 0 0;
     }
 
